--- a/mpvue/my-project/package.json
+++ b/mpvue/my-project/package.json
@@ -23,6 +23,10 @@
     "build": "node build/build.js wx"
   },
   "dependencies": {
+    "flyio": "^0.6.13",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "moment": "^2.24.0",
     "mpvue": "^2.0.0",
     "vuex": "^3.0.1"
   },
