--- a/mpvue/my-project/project.config.json
+++ b/mpvue/my-project/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -13,6 +13,7 @@
 	"compileType": "miniprogram",
 	"appid": "wx5ef45a4230842a08",
 	"projectname": "mpvue",
+	"libVersion": "2.6.0",
 	"condition": {
 		"search": {
 			"current": -1,
