--- a/mpvue/my-project/package.json
+++ b/mpvue/my-project/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "flyio": "^0.6.13",
+    "fs": "^0.0.1-security",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "moment": "^2.24.0",
